--- a/cryptopass_web3_btn/css/styles.module.css
+++ b/cryptopass_web3_btn/css/styles.module.css
@@ -1,5 +1,5 @@
 /* CSS */
-.button-web3 {
+.buttonWeb3 {
   align-items: center;
   appearance: none;
   background-image: radial-gradient(
@@ -35,18 +35,18 @@
   font-size: 18px;
 }
 
-.button-web3:focus {
+.buttonWeb3:focus {
   box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
     rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
 }
 
-.button-web3:hover {
+.buttonWeb3:hover {
   box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
     rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
   transform: translateY(-2px);
 }
 
-.button-web3:active {
+.buttonWeb3:active {
   box-shadow: #3c4fe0 0 3px 7px inset;
   transform: translateY(2px);
 }
