--- a/cryptopass_web3_btn/tests/vite-test-web3btn/src/style.css
+++ b/cryptopass_web3_btn/tests/vite-test-web3btn/src/style.css
@@ -23,6 +23,30 @@ a:hover {
   color: #535bf2;
 }
 
+code {
+  font-size: 16px;
+  color: #ffffff;
+  background-color: #a347ad;
+  margin-left: 16px;
+  padding: 8px;
+  border: #646cff solid 2px;
+  border-radius: 12px;
+}
+
+ol > li:nth-child(odd) {
+  /* text-decoration-line: underline; */
+  color: #98e799;
+}
+
+ol > li:nth-child(even) {
+  /* text-decoration-line: underline; */
+  color: #98cde7;
+}
+
+ol li:not(:last-child) {
+  margin-bottom: 24px;
+}
+
 body {
   margin: 0;
   display: flex;
