--- a/cryptopass_frontend/vite-ui-test/src/App.css
+++ b/cryptopass_frontend/vite-ui-test/src/App.css
@@ -34,6 +34,9 @@
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 2em;
 }
 
@@ -53,6 +56,20 @@
 .options-title {
   position: absolute;
   transform: translateY(-56px);
+  background: linear-gradient(45deg, #8a2be2, #1e90ff, #ff69b4, #8a2be2);
+  box-shadow: #ccc 2px 2px 4px;
+  z-index: 10;
+  font-size: 24px;
+
+  border-radius: 20px;
+  width: fit-content;
+  height: fit-content;
+  padding: 12px 24px;
+}
+
+.options-title-btns {
+  position: absolute;
+  transform: translateY(-32px);
   background: linear-gradient(45deg, #8a2be2, #1e90ff, #ff69b4, #8a2be2);
   box-shadow: #ccc 2px 2px 4px;
   z-index: 10;
@@ -100,6 +117,10 @@
   height: 80px;
 }
 
+.spacerY-24 {
+  height: 24px;
+}
+
 .read-the-docs {
   color: #888;
 }
@@ -116,7 +137,7 @@
   gap: 10px;
   max-width: 250px;
   margin-bottom: 20px;
-  transform: translateX(185px);
+  transform: translateX(180px);
   margin-bottom: 32px;
   border: 2px solid #ded1d1ad;
   border-radius: 15px;
