--- a/cryptopass_frontend/vite-ui-test/src/App.css
+++ b/cryptopass_frontend/vite-ui-test/src/App.css
@@ -46,7 +46,7 @@
   align-items: center;
   border: #dbe6e9aa solid 2px;
   border-radius: 16px;
-  width: 600px;
+  width: 650px;
 
   margin-top: 24px;
   margin-bottom: 16px;
@@ -91,6 +91,10 @@
 }
 
 .options-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 12px;
   margin-bottom: 10px;
   width: 100%;
 
@@ -130,18 +134,24 @@
   animation: wobble-hor-bottom 1.3s both;
 }
 
+.center-it {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: fit-content;
+  margin-bottom: 54px;
+}
+
 .status-container {
   display: flex;
   flex-direction: column;
   align-items: start;
-  gap: 10px;
+  gap: 12px;
   max-width: 250px;
-  margin-bottom: 20px;
-  transform: translateX(180px);
-  margin-bottom: 32px;
   border: 2px solid #ded1d1ad;
   border-radius: 15px;
-  padding: 12px 24px;
+  padding: 16px 24px;
 }
 
 .status-item {
