--- a/cryptopass_frontend/vite-ui-test/src/index.css
+++ b/cryptopass_frontend/vite-ui-test/src/index.css
@@ -36,6 +36,13 @@ h1 {
   line-height: 1.1;
 }
 
+h2 {
+  margin-bottom: 12px;
+  font-size: 2em;
+  margin-top: 0;
+  /* line-height: 1.1; */
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
